# idiot-kit

./: CMakeLists.txt  README.md
cmake/modules/: FindGLFW.cmake
src/: CMakeLists.txt  main.c
src/winsys/: CMakeLists.txt  shaders.c  shaders.h  winsys.c  winsys.h
